fixed some text-alignment for mobile

--- a/src/App.css
+++ b/src/App.css
@@ -59,4 +59,7 @@
     top: -82%;
     left: 62%;
   }
+  .lead {
+    text-align: left;
+  }
 }
